Add bootstrap to new and show views.

--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -11,17 +11,17 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="field form-group">
     <%= form.label :street_address %>
-    <%= form.text_field :street_address, id: :location_street_address %>
+    <%= form.text_field :street_address, id: :location_street_address, class: 'form-control' %>
   </div>
 
-  <div class="field">
+  <div class="field form-group">
     <%= form.label :city %>
-    <%= form.text_field :city, id: :location_city %>
+    <%= form.text_field :city, id: :location_city, class: 'form-control' %>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
+  <div class="actions form-group">
+    <%= form.submit class: 'btn btn-default' %>
   </div>
 <% end %>
