--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New Location</h1>
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
 
-<%= render 'form', location: @location %>
+      <h1>Escape Bus</h1>
 
-<%= link_to 'Back', locations_path %>
+      <p>Give us your address or corner, and we'll let you know if there is a bus nearby.</p>
+
+      <%= render 'form', location: @location %>
+
+    </div>
+  </div>
+</div>
