--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -2,6 +2,9 @@
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
 
+      <br>
+      <p id="notice"><%= notice %></p>
+
       <h1>Escape Bus</h1>
 
       <p>Give us your address or corner, and we'll let you know if there is a bus nearby.</p>
