--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,27 +1,26 @@
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
 
+      <p id="notice"><%= notice %></p>
 
+      <h1>Your Escape Bus!</h1>
 
-<p id="notice"><%= notice %></p>
+      <h3 class="text-muted">Your current location</h3>
 
-<h1>Your Escape Bus!</h1>
+      <p class="text-muted">
+        <%= @location.full_street_address %> <small><%= link_to fa_icon('pencil', text: 'Edit'), edit_location_path(@location) %></small>
+      </p>
 
-<h3 class="text-muted">Your current location</h3>
+      <h3>The closest buses are...</h3>
+      <% @buses.each do |bus| %>
+        <p>
+          <strong>Route:</strong> <%= bus["ROUTE"] %> <%= bus["DIRECTION"] %><br>
+          <strong>Bus Number:</strong> <%= bus["VEHICLE"] %><br>
+          <strong>Next Stop: </strong> <%= bus["TIMEPOINT"] %><br>
+        </p>
+      <% end %>
 
-<p class="text-muted">
-  <%= @location.full_street_address %> <small><%= link_to fa_icon('pencil', text: 'Edit'), edit_location_path(@location) %></small>
-</p>
-
-<h3>The closest buses are...</h3>
-<% @buses.each do |bus| %>
-  <p>
-    <strong>Route:</strong> <%= bus["ROUTE"] %> <%= bus["DIRECTION"] %><br>
-    <strong>Bus Number:</strong> <%= bus["VEHICLE"] %><br>
-    <strong>Next Stop: </strong> <%= bus["TIMEPOINT"] %><br>
-  </p>
-<% end %>
-
-<% if @buses.empty? %>
-  <p>
-    Not really that close. :( Time to walk, bike, taxi, Uber, or <%= link_to 'edit your location', edit_location_path(@location) %>.
-  </p>
-<% end %>
+    </div>
+  </div>
+</div>
