Add google map to show view.

--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -12,6 +12,10 @@
         <%= @location.full_street_address %> <small><%= link_to fa_icon('pencil', text: 'Edit'), edit_location_path(@location) %></small>
       </p>
 
+      <div id="map-canvas">
+
+      </div>
+
       <h3>The closest buses are...</h3>
       <% @buses.each do |bus| %>
         <p>
@@ -24,3 +28,69 @@
     </div>
   </div>
 </div>
+
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['google_maps_api_key'] %>"></script>
+
+<script>
+  function initialize() {
+    // User location
+    var myLocation = new google.maps.LatLng(<%= @location.latitude %>, <%= @location.longitude %>);
+
+    // Map settings
+    var mapOptions = {
+      center: myLocation,
+      zoom: 15
+    };
+
+    // The Map
+    var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+
+    // Person icon
+    var personIcon = "<%= image_path 'man_icon.png' %>";
+
+    // User marker / pin
+    var myMarker = new google.maps.Marker({
+      position: myLocation,
+      map: map,
+      animation: google.maps.Animation.DROP,
+      title: 'My Location',
+      icon: personIcon
+    });
+
+    // All the buses
+    var nearbyBuses = <%= raw @buses.to_json %>;
+
+    // Drop a pin for each bus in the array
+    nearbyBuses.forEach(function(bus) {
+      // bus latitude and longitude
+      var busLocation = new google.maps.LatLng(bus["LATITUDE"], bus["LONGITUDE"]);
+
+      // Marker / pin for the bus
+      var busMarker = new google.maps.Marker({
+        position: busLocation,
+        map: map,
+        animation: google.maps.Animation.DROP,
+        title: bus["VEHICLE"]
+      });
+
+      var contentString = "<div id='content'>" +
+        "<h2>Bus: " + bus["VEHICLE"] + " - " + bus["DIRECTION"] + "</h2>" +
+        "<div id='bodyContent'>" +
+          "<p>Next Stop: " + bus["TIMEPOINT"] + "</p>" +
+        "</div>" +
+      "</div>";
+
+      var infoWindow = new google.maps.InfoWindow({
+        content: contentString
+      });
+
+      google.maps.event.addListener(busMarker, 'click', function() {
+        infoWindow.open(map, busMarker);
+      });
+    });
+
+  }
+
+  google.maps.event.addDomListener(window, 'load', initialize);
+</script>
+
