--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -11,12 +11,12 @@
     </div>
   <% end %>
 
-  <div class="field form-group">
+  <div class="field form-group text-center">
     <%= form.label :street_address %>
     <%= form.text_field :street_address, id: :location_street_address, class: 'form-control' %>
   </div>
 
-  <div class="field form-group">
+  <div class="field form-group text-center">
     <%= form.label :city %>
     <% @cities = ['Atlanta',
                   'Alpharetta',
@@ -46,13 +46,7 @@
     <%= form.collection_select :city, @cities.sort, :to_s, :to_s, include_blank: "Atlanta" %>
   </div>
 
-  <div class="field form-group">
-    <%= form.label :max_distance %>
-    <% @max_distances = [ '0.01', '0.2', '0.5', '1' ] %>
-    <%= form.collection_select :max_distance, @max_distances.sort, :to_f, :to_f, include_blank: false %>
-  </div>
-
-  <div class="actions form-group">
+  <div class="actions form-group text-center">
     <%= form.submit class: 'btn btn-default' %>
   </div>
 <% end %>
