--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,11 +1,18 @@
-<div class="container-fluid">
+<br>
+<div style="position: relative; animation-name: bus; animation-duration: 4s; animation-timing-function: linear;">
+  <%= image_tag("orange-bus.png", size: "300x150") %>
+</div>
+
+
+
+<div class="container-fluid text-center">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
 
       <br>
       <p id="notice"><%= notice %></p>
 
-      <h1>Escape Bus</h1>
+      <h1>Let's Take the Bus!</h1>
 
       <p>Give us your address or corner, and we'll let you know if there is a bus nearby.</p>
 
@@ -14,3 +21,15 @@
     </div>
   </div>
 </div>
+<br>
+
+<footer>
+  <div class="row">
+    <div class="text-center">
+      <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>
+      <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>
+      <a href="https://plus.google.com/discover" target="_blank"><i class="fa fa-google-plus-square fa-2x" aria-hidden="true"></i></a>
+      <a href="https://github.com/ypett/my_bus" target="_blank"><i class="fa fa-github-square fa-2x" aria-hidden="true"></i></a>
+    </div>
+  </div>
+</footer>
