--- a/app/views/locations/_form.html.erb
+++ b/app/views/locations/_form.html.erb
@@ -47,6 +47,6 @@
   </div>
 
   <div class="actions form-group text-center">
-    <%= form.submit class: 'btn btn-default' %>
+    <%= form.submit "Find Buses", class: 'btn btn-default' %>
   </div>
 <% end %>
