--- a/app/views/locations/edit.html.erb
+++ b/app/views/locations/edit.html.erb
@@ -1,6 +1,15 @@
-<h1>Editing Location</h1>
+<div class="container-fluid text-center">
+  <div class="row">
+    <div class="col-md-6 col-md-offset-3">
 
-<%= render 'form', location: @location %>
+      <h1>Editing Location</h1>
 
-<%= link_to 'Show', @location %> |
-<%= link_to 'Back', locations_path %>
+      <%= render 'form', location: @location %>
+
+      <%#= link_to 'Show', @location, class: 'btn btn-info' %>
+      <%#= link_to 'Back', locations_path, class: 'btn btn-info' %>
+      <%= link_to 'New Location', new_location_path, class: 'btn btn-info' %>
+
+    </div>
+  </div>
+</div>
