Add image and new message to edit page.

--- a/app/views/locations/edit.html.erb
+++ b/app/views/locations/edit.html.erb
@@ -1,8 +1,12 @@
+<br>
+<div class="text-center">
+  <%= image_tag("orange-bus.png", size: "100x50") %>
+  <h3>Hmmm ... something wrong with this address?</h3>
+</div>
+
 <div class="container-fluid text-center">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-
-      <h1>Editing Location</h1>
 
       <%= render 'form', location: @location %>
 
